<resources>
    <string name="app_name">Saltamontes</string>
    <string name="Documento">Documento</string>
    <string name="Nombre_Completo">Nombre Completo</string>
    <string name="Edad">Edad</string>
    <string name="Telefono">Telefono</string>
    <string name="Direccion">Direccion</string>
    <string name="Nota">Nota</string>
    <string name="Nombre_Materia">Nombre Materia</string>
    <string name="Welcome">Welcome</string>
    <string name="Promedio_Final">Promedio Final</string>
    <string name="Nuevo_Registro">Nuevo Registro</string>
    <string name="Estadisticas">Estadisticas</string>
    <string name="Ayuda">Ayuda</string>
    <string name="Que_Es">Saltamontes es una app pensada para el promedio de notas de mis pequeños saltamontes, consiste en poner la informacion del estudiante, sus materias y notas finales de cada una de estas, para posteriormente el sistema calcular su promedio, asiganr si gano o perdio y en caso de perder dice si puede recuperar o definitivamente perdio</string>
    <string name="Como_Funciona">¿Como Funciona?</string>
    <string name="ComoFunciona">Al abrir la aplicacion te aparecera el menu principal que costa de tres botones para su correcto funcionamiento</string>
    <string name="NuevoRegistro">Nuevo Registro nos presentara un formulario en el cual debera ingresar la informacion del estudiantes, sus materias y sus notas al precionar la el boton Calcular lo llevara a la pantalla de resultados donde te dira si gana, pierde o puede recuperar, en caso de querer ir a la pantalla anterior precionas en el boton Salir</string>
    <string name="EstadisticasApp">Estadisticas nos presentara la cantidad todal de estudiantes registrados en la aplicacion, la cantidad de estudiantes que perdieron y la cantidad de estudiantes que ganaron, en caso de querer volver al menu incial presionamos en el boton Salir</string>
    <string name="AyudaApp">Ayuda es la pantalla en la que estamos parados actualmente, nos presenta todo el instructivo de la aplicacion y su funcionamiento</string>
</resources>