<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/fondovertical">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Welcome"
        android:textColor="@color/blue"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="378dp"
        android:layout_height="647dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.034">

        <EditText
            android:id="@+id/Documento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:hint="@string/Documento"
            android:inputType="number" />

        <EditText
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:hint="@string/Nombre_Completo"
            android:inputType="text" />

        <EditText
            android:id="@+id/Edad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:hint="@string/Edad"
            android:inputType="number" />

        <EditText
            android:id="@+id/Telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:hint="@string/Telefono"
            android:inputType="number" />

        <EditText
            android:id="@+id/Direccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:hint="@string/Direccion"
            android:inputType="text" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp">

            <TableRow>

                <EditText
                    android:id="@+id/NombreMateria1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/Nombre_Materia"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/NotaMateria1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/Nota"
                    android:inputType="numberDecimal" />
            </TableRow>
        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp">

            <TableRow>

                <EditText
                    android:id="@+id/NombreMateria2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/Nombre_Materia"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/NotaMateria2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/Nota"
                    android:inputType="numberDecimal" />
            </TableRow>
        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp">

            <TableRow>

                <EditText
                    android:id="@+id/NombreMateria3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/Nombre_Materia"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/NotaMateria3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/Nota"
                    android:inputType="numberDecimal" />
            </TableRow>
        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp">

            <TableRow>

                <EditText
                    android:id="@+id/NombreMateria4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/Nombre_Materia"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/NotaMateria4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/Nota"
                    android:inputType="numberDecimal" />
            </TableRow>
        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp">

            <TableRow>

                <EditText
                    android:id="@+id/NombreMateria5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/Nombre_Materia"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/NotaMateria5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/Nota"
                    android:inputType="numberDecimal" />
            </TableRow>
        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp">

            <TableRow>
                <Button
                    android:id="@+id/BtnCalcular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:backgroundTint="@color/blue"
                    android:text="CALCULAR"
                    android:layout_weight="1"
                    android:layout_marginRight="2dp"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/BtnSalir"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:backgroundTint="@color/blue"
                    android:layout_weight="1"
                    android:text="Salir"
                    android:layout_marginLeft="2dp"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </TableRow>
        </TableLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>